# testing

./: .gitignore  README.md
testing_basics/: Makefile  README.md  requirements.txt  slides.md
testing_basics/first_steps/: README.md  code.py  pytest.ini  test_code.py  test_debugger.py  test_fixtures.py  test_parametrized.py  test_property_based.py
testing_basics/property_based/: test_code.py
testing_basics/python_project/: README.md  pyproject.toml
testing_basics/python_project/my_project/: sorting.py
testing_basics/python_project/tests/: test_module.py  test_sorting.py
